ressources-fluentd/k8s/postgres/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: postgres-network-policy
  namespace: monitoring-elk
spec:
  podSelector:
    matchLabels:
      name: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
      - podSelector:
          matchLabels:
            app: client-postgres
      ports:
      - port: 5432
        protocol: TCP
